# cpp-raytracer

./: CMakeLists.txt  LICENSE  README.md
include/: camera.h  canvas.h  raytracer.h  scene.h
src/: camera.cpp  canvas.cpp  main.cpp  raytracer.cpp
